style: fix button spacing

--- a/src/components/PercentageChooser.module.css
+++ b/src/components/PercentageChooser.module.css
@@ -58,6 +58,7 @@
   text-align: right;
   background-color: var(--clr-grayish-cyan-100);
   color: var(--clr-grayish-cyan-500);
+  padding-left: 0;
   padding-right: 1rem;
   border: none;
   border-radius: 4px;
@@ -85,6 +86,7 @@
   }
 
   .customContainer > button {
-    padding-right: 0.8rem;
+    padding-right: 0;
+    text-align: center;
   }
 }
